Import TestConfig in test classes and update test cases for DynamoDB integration