@@ -2,6 +2,7 @@ package com.maal.certifiedbuilderapi.business.usecases;
 
 import com.maal.certifiedbuilderapi.business.dto.CertificateStatisticsResponse;
 import com.maal.certifiedbuilderapi.business.usecase.certificate.GetCertificateStatistics;
+import com.maal.certifiedbuilderapi.config.TestConfig;
 import com.maal.certifiedbuilderapi.domain.entity.CertificateEntity;
 import com.maal.certifiedbuilderapi.domain.entity.OrderEntity;
 import com.maal.certifiedbuilderapi.domain.entity.ProductEntity;
@@ -14,18 +15,21 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.context.annotation.Import;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.when;
 
 /**
  * Testes para GetCertificateStatistics
  * Atualizados para usar métodos desnormalizados do DynamoDB
  */
 @ExtendWith(MockitoExtension.class)
+@Import(TestConfig.class)
 class GetCertificateStatisticsTests {
 
     @Mock
@@ -41,43 +45,42 @@ class GetCertificateStatisticsTests {
     private GetCertificateStatistics getCertificateStatistics;
 
     @Test
-    @DisplayName("Should return statistics when product and certificates are present")
-    void shouldReturnStatisticsWhenProductAndCertificatesArePresent() {
+    @DisplayName("Should return correct statistics when certificates exist")
+    void shouldReturnCorrectStatisticsWhenCertificatesExist() {
         // Given
         Integer productId = 1;
         ProductEntity product = new ProductEntity();
         product.setProductId(productId);
-        product.setProductName("Example Product");
+        product.setProductName("Test Product");
+
+        CertificateEntity cert1 = new CertificateEntity();
+        cert1.setSuccess(true);
+        CertificateEntity cert2 = new CertificateEntity();
+        cert2.setSuccess(false);
+        CertificateEntity cert3 = new CertificateEntity();
+        cert3.setSuccess(null);
 
         OrderEntity order1 = new OrderEntity();
         OrderEntity order2 = new OrderEntity();
 
-        CertificateEntity cert1 = new CertificateEntity(); // success = true
-        cert1.setSuccess(true);
-        CertificateEntity cert2 = new CertificateEntity(); // success = false
-        cert2.setSuccess(false);
-        CertificateEntity cert3 = new CertificateEntity(); // pending (null)
-        cert3.setSuccess(null);
-
         when(productRepository.findByProductId(productId)).thenReturn(Optional.of(product));
-        when(orderRepository.findByProductId(productId)).thenReturn(List.of(order1, order2));
-        when(certificateRepository.findByProductId(productId)).thenReturn(List.of(cert1, cert2, cert3));
+        when(certificateRepository.findByProductId(productId)).thenReturn(Arrays.asList(cert1, cert2, cert3));
+        when(orderRepository.findByProductId(productId)).thenReturn(Arrays.asList(order1, order2));
 
         // When
         CertificateStatisticsResponse result = getCertificateStatistics.execute(productId);
 
         // Then
-        assertNotNull(result);
         assertEquals(productId, result.getProductId());
-        assertEquals("Example Product", result.getProductName());
-        assertEquals(2, result.getTotalCertificates()); // Total orders
+        assertEquals("Test Product", result.getProductName());
+        assertEquals(2, result.getTotalCertificates());
         assertEquals(1, result.getSuccessfulCertificates());
         assertEquals(1, result.getFailedCertificates());
         assertEquals(1, result.getPendingCertificates());
     }
 
     @Test
-    @DisplayName("Should throw IllegalArgumentException when product is not found")
+    @DisplayName("Should throw exception when product not found")
     void shouldThrowExceptionWhenProductNotFound() {
         // Given
         Integer productId = 99;
@@ -92,25 +95,56 @@ class GetCertificateStatisticsTests {
     }
 
     @Test
-    @DisplayName("Should return all counts as zero when no certificates or orders exist")
-    void shouldReturnZeroStatsWhenNoData() {
+    @DisplayName("Should return zero statistics when no certificates exist")
+    void shouldReturnZeroStatisticsWhenNoCertificatesExist() {
         // Given
-        Integer productId = 5;
+        Integer productId = 1;
         ProductEntity product = new ProductEntity();
         product.setProductId(productId);
         product.setProductName("Empty Product");
 
         when(productRepository.findByProductId(productId)).thenReturn(Optional.of(product));
-        when(orderRepository.findByProductId(productId)).thenReturn(List.of());
         when(certificateRepository.findByProductId(productId)).thenReturn(List.of());
+        when(orderRepository.findByProductId(productId)).thenReturn(List.of());
 
         // When
         CertificateStatisticsResponse result = getCertificateStatistics.execute(productId);
 
         // Then
-        assertNotNull(result);
+        assertEquals(productId, result.getProductId());
+        assertEquals("Empty Product", result.getProductName());
         assertEquals(0, result.getTotalCertificates());
         assertEquals(0, result.getSuccessfulCertificates());
+        assertEquals(0, result.getFailedCertificates());
+        assertEquals(0, result.getPendingCertificates());
+    }
+
+    @Test
+    @DisplayName("Should handle only successful certificates")
+    void shouldHandleOnlySuccessfulCertificates() {
+        // Given
+        Integer productId = 1;
+        ProductEntity product = new ProductEntity();
+        product.setProductId(productId);
+        product.setProductName("Success Product");
+
+        CertificateEntity cert1 = new CertificateEntity();
+        cert1.setSuccess(true);
+        CertificateEntity cert2 = new CertificateEntity();
+        cert2.setSuccess(true);
+
+        OrderEntity order1 = new OrderEntity();
+
+        when(productRepository.findByProductId(productId)).thenReturn(Optional.of(product));
+        when(certificateRepository.findByProductId(productId)).thenReturn(Arrays.asList(cert1, cert2));
+        when(orderRepository.findByProductId(productId)).thenReturn(Arrays.asList(order1));
+
+        // When
+        CertificateStatisticsResponse result = getCertificateStatistics.execute(productId);
+
+        // Then
+        assertEquals(1, result.getTotalCertificates());
+        assertEquals(2, result.getSuccessfulCertificates());
         assertEquals(0, result.getFailedCertificates());
         assertEquals(0, result.getPendingCertificates());
     }
